[package]
name = "kloni"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
attohttpc = { version = "0.24.0", features = ["json"]} 
clap = "4.0.29"
skim = "0.10.2"
directories = "4.0.1"
git2 = "0.14"
toml = "0.4.2"
anyhow = "1.0.68"
thiserror = "1.0.38"

[dev-dependencies]
assert_cmd = "2.0.7"
httpmock = "0.6.7"
