[package]
name = "kloni"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
attohttpc = { version = "0.26.1", features = ["json"] }
# clap = "4.0.29"
skim = "0.10.4"
directories = "5.0.1"
git2 = "0.18.1"
toml = "0.8.8"
anyhow = "1.0.75"
thiserror = "1.0.50"
openssl = "0.10.61"
remove_dir_all = "0.8.2"
regex = "1.10.2"
lazy_static = "1.4.0"

[dev-dependencies]
httpmock = "0.6.8"
